--- a/IDistributedCacheRedisApp.Web/Views/Products/Show.cshtml
+++ b/IDistributedCacheRedisApp.Web/Views/Products/Show.cshtml
@@ -2,6 +2,8 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+    Product p = ViewBag.product as Product;
 }
 
-<h1>@ViewBag.name</h1>
+<h1>Show</h1>
+<h1>@p.Id => @p.Name</h1>
